# Energy_Forecasting

./: .gitignore  02_energy_forecasting_ai_engineering_plan.docx  PROJECT_LOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: ablation_results.csv  backtest_calendar.csv  backtest_metrics.csv  backtest_summary.csv  data_contract_report.json  feature_config.json  feature_set_comparison.csv  forecast_bundle.joblib.sha256  model_selection.json  residual_summary.json  test_metrics.json  test_slice_errors.csv
docs/: CI_PLAN.md  V2_FEATURE_SET_PLAN.md  model_card.md
notebooks/: energy_1h_forecast.ipynb
scripts/: compare_feature_sets.py
src/energy_forecasting/: __init__.py  backtest.py  config.py  data.py  features.py  inference.py  metrics.py  models.py  splits.py  train.py
tests/: conftest.py  test_feature_set_v2.py  test_inference.py  test_splits_and_metrics.py  test_temporal_features.py
