[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecasting"
version = "1.0.0"
description = "One-hour-ahead appliance energy load forecasting with leakage-safe time-series features (UCI Appliances Energy Prediction)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sayomphon Kha." }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "ucimlrepo>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "matplotlib>=3.7",
]
tracking = [
    "mlflow>=2.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear (common bug patterns)
    "UP",  # pyupgrade
    "S",   # bandit security checks
]
ignore = [
    "S101", # assert is idiomatic in tests and data-contract guards
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B011"]
